Changed another deprecated constructor.